@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,21 +22,22 @@ import java.sql.Connection;
 import java.sql.DatabaseMetaData;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.sql.SQLWarning;
 import java.sql.Statement;
 import java.sql.Types;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+
 import javax.sql.DataSource;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.dao.DataAccessException;
 import org.springframework.dao.InvalidDataAccessApiUsageException;
@@ -50,11 +51,19 @@ import org.springframework.jdbc.datasource.SingleConnectionDataSource;
 import org.springframework.jdbc.support.SQLErrorCodeSQLExceptionTranslator;
 import org.springframework.jdbc.support.SQLStateSQLExceptionTranslator;
 import org.springframework.util.LinkedCaseInsensitiveMap;
+import org.springframework.util.StringUtils;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
-import static org.springframework.tests.Matchers.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willThrow;
+import static org.mockito.Mockito.atLeastOnce;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 /**
  * Mock object based tests for JdbcTemplate.
@@ -80,11 +89,8 @@ public class JdbcTemplateTests {
 
 	private CallableStatement callableStatement;
 
-	@Rule
-	public ExpectedException thrown = ExpectedException.none();
 
-
-	@Before
+	@BeforeEach
 	public void setup() throws Exception {
 		this.connection = mock(Connection.class);
 		this.dataSource = mock(DataSource.class);
@@ -107,10 +113,11 @@ public class JdbcTemplateTests {
 
 	@Test
 	public void testBeanProperties() throws Exception {
-		assertTrue("datasource ok", this.template.getDataSource() == this.dataSource);
-		assertTrue("ignores warnings by default", this.template.isIgnoreWarnings());
+		assertThat(this.template.getDataSource() == this.dataSource).as("datasource ok").isTrue();
+		assertThat(this.template.isIgnoreWarnings()).as("ignores warnings by default").isTrue();
 		this.template.setIgnoreWarnings(false);
-		assertTrue("can set NOT to ignore warnings", !this.template.isIgnoreWarnings());
+		boolean condition = !this.template.isIgnoreWarnings();
+		assertThat(condition).as("can set NOT to ignore warnings").isTrue();
 	}
 
 	@Test
@@ -120,7 +127,7 @@ public class JdbcTemplateTests {
 		given(this.preparedStatement.executeUpdate()).willReturn(1);
 		Dispatcher d = new Dispatcher(idParam, sql);
 		int rowsAffected = this.template.update(d);
-		assertTrue("1 update affected 1 row", rowsAffected == 1);
+		assertThat(rowsAffected == 1).as("1 update affected 1 row").isTrue();
 		verify(this.preparedStatement).setInt(1, idParam);
 		verify(this.preparedStatement).close();
 		verify(this.connection).close();
@@ -136,90 +143,55 @@ public class JdbcTemplateTests {
 		given(this.preparedStatement.executeUpdate()).willThrow(sqlException);
 
 		Dispatcher d = new Dispatcher(idParam, sql);
-		this.thrown.expect(UncategorizedSQLException.class);
-		this.thrown.expect(exceptionCause(equalTo(sqlException)));
-		try {
-			this.template.update(d);
-		}
-		finally {
-			verify(this.preparedStatement).setInt(1, idParam);
-			verify(this.preparedStatement).close();
-			verify(this.connection, atLeastOnce()).close();
-		}
+		assertThatExceptionOfType(UncategorizedSQLException.class).isThrownBy(() ->
+				this.template.update(d))
+			.withCause(sqlException);
+		verify(this.preparedStatement).setInt(1, idParam);
+		verify(this.preparedStatement).close();
+		verify(this.connection, atLeastOnce()).close();
 	}
 
 	@Test
 	public void testStringsWithStaticSql() throws Exception {
-		doTestStrings(null, null, null, null, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, rch);
-			}
-		});
+		doTestStrings(null, null, null, null, (template, sql, rch) -> template.query(sql, rch));
 	}
 
 	@Test
 	public void testStringsWithStaticSqlAndFetchSizeAndMaxRows() throws Exception {
-		doTestStrings(10, 20, 30, null, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, rch);
-			}
-		});
+		doTestStrings(10, 20, 30, null, (template, sql, rch) -> template.query(sql, rch));
 	}
 
 	@Test
 	public void testStringsWithEmptyPreparedStatementSetter() throws Exception {
-		doTestStrings(null, null, null, null, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, (PreparedStatementSetter) null, rch);
-			}
-		});
+		doTestStrings(null, null, null, null, (template, sql, rch) ->
+				template.query(sql, (PreparedStatementSetter) null, rch));
 	}
 
 	@Test
 	public void testStringsWithPreparedStatementSetter() throws Exception {
 		final Integer argument = 99;
-		doTestStrings(null, null, null, argument, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, new PreparedStatementSetter() {
-					@Override
-					public void setValues(PreparedStatement ps) throws SQLException {
-						ps.setObject(1, argument);
-					}
-				}, rch);
-			}
-		});
+		doTestStrings(null, null, null, argument, (template, sql, rch) ->
+			template.query(sql, ps -> ps.setObject(1, argument), rch));
 	}
 
 	@Test
 	public void testStringsWithEmptyPreparedStatementArgs() throws Exception {
-		doTestStrings(null, null, null, null, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, (Object[]) null, rch);
-			}
-		});
+		doTestStrings(null, null, null, null,
+				(template, sql, rch) -> template.query(sql, (Object[]) null, rch));
 	}
 
 	@Test
 	public void testStringsWithPreparedStatementArgs() throws Exception {
 		final Integer argument = 99;
-		doTestStrings(null, null, null, argument, new JdbcTemplateCallback() {
-			@Override
-			public void doInJdbcTemplate(JdbcTemplate template, String sql, RowCallbackHandler rch) {
-				template.query(sql, new Object[] { argument }, rch);
-			}
-		});
+		doTestStrings(null, null, null, argument,
+				(template, sql, rch) -> template.query(sql, new Object[] {argument}, rch));
 	}
 
 	private void doTestStrings(Integer fetchSize, Integer maxRows, Integer queryTimeout,
 			Object argument, JdbcTemplateCallback jdbcTemplateCallback) throws Exception {
 
 		String sql = "SELECT FORENAME FROM CUSTMR";
-		String[] results = { "rod", "gary", " portia" };
+		String[] results = {"rod", "gary", " portia"};
 
 		class StringHandler implements RowCallbackHandler {
 			private List<String> list = new LinkedList<>();
@@ -228,7 +200,7 @@ public class JdbcTemplateTests {
 				this.list.add(rs.getString(1));
 			}
 			public String[] getStrings() {
-				return this.list.toArray(new String[this.list.size()]);
+				return StringUtils.toStringArray(this.list);
 			}
 		}
 
@@ -252,9 +224,9 @@ public class JdbcTemplateTests {
 
 		// Match
 		String[] forenames = sh.getStrings();
-		assertTrue("same length", forenames.length == results.length);
+		assertThat(forenames.length == results.length).as("same length").isTrue();
 		for (int i = 0; i < forenames.length; i++) {
-			assertTrue("Row " + i + " matches", forenames[i].equals(results[i]));
+			assertThat(forenames[i].equals(results[i])).as("Row " + i + " matches").isTrue();
 		}
 
 		if (fetchSize != null) {
@@ -298,12 +270,12 @@ public class JdbcTemplateTests {
 		String result = this.template.execute(new ConnectionCallback<String>() {
 			@Override
 			public String doInConnection(Connection con) {
-				assertTrue(con instanceof ConnectionProxy);
-				assertSame(JdbcTemplateTests.this.connection, ((ConnectionProxy) con).getTargetConnection());
+				assertThat(con instanceof ConnectionProxy).isTrue();
+				assertThat(((ConnectionProxy) con).getTargetConnection()).isSameAs(JdbcTemplateTests.this.connection);
 				return "test";
 			}
 		});
-		assertEquals("test", result);
+		assertThat(result).isEqualTo("test");
 	}
 
 	@Test
@@ -319,7 +291,7 @@ public class JdbcTemplateTests {
 			}
 		});
 
-		assertEquals("test", result);
+		assertThat(result).isEqualTo("test");
 		verify(this.preparedStatement).setFetchSize(10);
 		verify(this.preparedStatement).setMaxRows(20);
 		verify(this.preparedStatement).close();
@@ -352,14 +324,12 @@ public class JdbcTemplateTests {
 		given(this.resultSet.next()).willReturn(true);
 		given(this.connection.createStatement()).willReturn(this.preparedStatement);
 
-		this.thrown.expect(sameInstance(runtimeException));
 		try {
-			this.template.query(sql, new RowCallbackHandler() {
-				@Override
-				public void processRow(ResultSet rs) {
-					throw runtimeException;
-				}
-			});
+			assertThatExceptionOfType(RuntimeException.class).isThrownBy(() ->
+					this.template.query(sql, (RowCallbackHandler) rs -> {
+						throw runtimeException;
+					}))
+				.withMessage(runtimeException.getMessage());
 		}
 		finally {
 			verify(this.resultSet).close();
@@ -380,7 +350,7 @@ public class JdbcTemplateTests {
 		given(this.connection.createStatement()).willReturn(this.statement);
 
 		int actualRowsAffected = this.template.update(sql);
-		assertTrue("Actual rows affected is correct", actualRowsAffected == rowsAffected);
+		assertThat(actualRowsAffected == rowsAffected).as("Actual rows affected is correct").isTrue();
 		verify(this.statement).close();
 		verify(this.connection).close();
 	}
@@ -395,10 +365,10 @@ public class JdbcTemplateTests {
 		given(this.preparedStatement.executeUpdate()).willReturn(rowsAffected);
 
 		int actualRowsAffected = this.template.update(sql,
-				new Object[] {4, new SqlParameterValue(Types.NUMERIC, 2, new Float(1.4142))});
-		assertTrue("Actual rows affected is correct", actualRowsAffected == rowsAffected);
+				4, new SqlParameterValue(Types.NUMERIC, 2, Float.valueOf(1.4142f)));
+		assertThat(actualRowsAffected == rowsAffected).as("Actual rows affected is correct").isTrue();
 		verify(this.preparedStatement).setObject(1, 4);
-		verify(this.preparedStatement).setObject(2, new Float(1.4142), Types.NUMERIC, 2);
+		verify(this.preparedStatement).setObject(2, Float.valueOf(1.4142f), Types.NUMERIC, 2);
 		verify(this.preparedStatement).close();
 		verify(this.connection).close();
 	}
@@ -411,14 +381,11 @@ public class JdbcTemplateTests {
 		given(this.statement.executeUpdate(sql)).willThrow(sqlException);
 		given(this.connection.createStatement()).willReturn(this.statement);
 
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		try {
-			this.template.update(sql);
-		}
-		finally {
-			verify(this.statement).close();
-			verify(this.connection, atLeastOnce()).close();
-		}
+		assertThatExceptionOfType(DataAccessException.class).isThrownBy(() ->
+				this.template.update(sql))
+			.withCause(sqlException);
+		verify(this.statement).close();
+		verify(this.connection, atLeastOnce()).close();
 	}
 
 	@Test
@@ -430,7 +397,7 @@ public class JdbcTemplateTests {
 		given(this.connection.createStatement()).willReturn(this.statement);
 
 		int actualRowsAffected = this.template.update(sql);
-		assertTrue("Actual rows affected is correct", actualRowsAffected == rowsAffected);
+		assertThat(actualRowsAffected == rowsAffected).as("Actual rows affected is correct").isTrue();
 
 		verify(this.statement).close();
 		verify(this.connection).close();
@@ -448,7 +415,7 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
 
 		verify(this.statement).addBatch(sql[0]);
 		verify(this.statement).addBatch(sql[1]);
@@ -460,8 +427,7 @@ public class JdbcTemplateTests {
 	public void testBatchUpdateWithBatchFailure() throws Exception {
 		final String[] sql = {"A", "B", "C", "D"};
 		given(this.statement.executeBatch()).willThrow(
-				new BatchUpdateException(new int[] { 1, Statement.EXECUTE_FAILED, 1,
-					Statement.EXECUTE_FAILED }));
+				new BatchUpdateException(new int[] {1, Statement.EXECUTE_FAILED, 1, Statement.EXECUTE_FAILED}));
 		mockDatabaseMetaData(true);
 		given(this.connection.createStatement()).willReturn(this.statement);
 
@@ -470,7 +436,7 @@ public class JdbcTemplateTests {
 			template.batchUpdate(sql);
 		}
 		catch (UncategorizedSQLException ex) {
-			assertThat(ex.getSql(), equalTo("B; D"));
+			assertThat(ex.getSql()).isEqualTo("B; D");
 		}
 	}
 
@@ -489,7 +455,7 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
 
 		verify(this.statement, never()).addBatch(anyString());
 		verify(this.statement).close();
@@ -508,31 +474,25 @@ public class JdbcTemplateTests {
 		given(this.connection.createStatement()).willReturn(this.statement);
 
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
-		this.thrown.expect(InvalidDataAccessApiUsageException.class);
-		try {
-			template.batchUpdate(sql);
-		}
-		finally {
-			verify(this.statement, never()).addBatch(anyString());
-			verify(this.statement).close();
-			verify(this.connection, atLeastOnce()).close();
-		}
+		assertThatExceptionOfType(InvalidDataAccessApiUsageException.class).isThrownBy(() ->
+				template.batchUpdate(sql));
+		verify(this.statement, never()).addBatch(anyString());
+		verify(this.statement).close();
+		verify(this.connection, atLeastOnce()).close();
 	}
 
 	@Test
 	public void testBatchUpdateWithPreparedStatement() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] ids = new int[] {100, 200};
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected);
 		mockDatabaseMetaData(true);
 
-		BatchPreparedStatementSetter setter =
-			new BatchPreparedStatementSetter() {
+		BatchPreparedStatementSetter setter = new BatchPreparedStatementSetter() {
 			@Override
-			public void setValues(PreparedStatement ps, int i)
-				throws SQLException {
+			public void setValues(PreparedStatement ps, int i) throws SQLException {
 				ps.setInt(1, ids[i]);
 			}
 			@Override
@@ -544,9 +504,9 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql, setter);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, times(2)).addBatch();
 		verify(this.preparedStatement).setInt(1, ids[0]);
@@ -558,8 +518,8 @@ public class JdbcTemplateTests {
 	@Test
 	public void testInterruptibleBatchUpdate() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] ids = new int[] {100, 200};
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected);
 		mockDatabaseMetaData(true);
@@ -585,9 +545,9 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql, setter);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, times(2)).addBatch();
 		verify(this.preparedStatement).setInt(1, ids[0]);
@@ -599,8 +559,8 @@ public class JdbcTemplateTests {
 	@Test
 	public void testInterruptibleBatchUpdateWithBaseClass() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] ids = new int[] {100, 200};
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected);
 		mockDatabaseMetaData(true);
@@ -622,9 +582,9 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql, setter);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, times(2)).addBatch();
 		verify(this.preparedStatement).setInt(1, ids[0]);
@@ -636,8 +596,8 @@ public class JdbcTemplateTests {
 	@Test
 	public void testInterruptibleBatchUpdateWithBaseClassAndNoBatchSupport() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] ids = new int[] {100, 200};
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeUpdate()).willReturn(rowsAffected[0], rowsAffected[1]);
 		mockDatabaseMetaData(false);
@@ -659,9 +619,9 @@ public class JdbcTemplateTests {
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql, setter);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, never()).addBatch();
 		verify(this.preparedStatement).setInt(1, ids[0]);
@@ -673,8 +633,8 @@ public class JdbcTemplateTests {
 	@Test
 	public void testBatchUpdateWithPreparedStatementAndNoBatchSupport() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] ids = new int[] {100, 200};
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeUpdate()).willReturn(rowsAffected[0], rowsAffected[1]);
 
@@ -690,9 +650,9 @@ public class JdbcTemplateTests {
 		};
 
 		int[] actualRowsAffected = this.template.batchUpdate(sql, setter);
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, never()).addBatch();
 		verify(this.preparedStatement).setInt(1, ids[0]);
@@ -704,7 +664,7 @@ public class JdbcTemplateTests {
 	@Test
 	public void testBatchUpdateFails() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final int[] ids = new int[] { 100, 200 };
+		final int[] ids = new int[] {100, 200};
 		SQLException sqlException = new SQLException();
 
 		given(this.preparedStatement.executeBatch()).willThrow(sqlException);
@@ -721,10 +681,10 @@ public class JdbcTemplateTests {
 			}
 		};
 
-		this.thrown.expect(DataAccessException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
 		try {
-			this.template.batchUpdate(sql, setter);
+			assertThatExceptionOfType(DataAccessException.class).isThrownBy(() ->
+					this.template.batchUpdate(sql, setter))
+				.withCause(sqlException);
 		}
 		finally {
 			verify(this.preparedStatement, times(2)).addBatch();
@@ -736,23 +696,30 @@ public class JdbcTemplateTests {
 	}
 
 	@Test
+	public void testBatchUpdateWithEmptyList() throws Exception {
+		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
+		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
+
+		int[] actualRowsAffected = template.batchUpdate(sql, Collections.emptyList());
+		assertThat(actualRowsAffected.length == 0).as("executed 0 updates").isTrue();
+	}
+
+	@Test
 	public void testBatchUpdateWithListOfObjectArrays() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final List<Object[]> ids = new ArrayList<>();
+		final List<Object[]> ids = new ArrayList<>(2);
 		ids.add(new Object[] {100});
 		ids.add(new Object[] {200});
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected);
 		mockDatabaseMetaData(true);
-
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[] actualRowsAffected = template.batchUpdate(sql, ids);
-
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 
 		verify(this.preparedStatement, times(2)).addBatch();
 		verify(this.preparedStatement).setObject(1, 100);
@@ -764,21 +731,20 @@ public class JdbcTemplateTests {
 	@Test
 	public void testBatchUpdateWithListOfObjectArraysPlusTypeInfo() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
-		final List<Object[]> ids = new ArrayList<>();
+		final List<Object[]> ids = new ArrayList<>(2);
 		ids.add(new Object[] {100});
 		ids.add(new Object[] {200});
 		final int[] sqlTypes = new int[] {Types.NUMERIC};
-		final int[] rowsAffected = new int[] { 1, 2 };
+		final int[] rowsAffected = new int[] {1, 2};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected);
 		mockDatabaseMetaData(true);
-
 		this.template = new JdbcTemplate(this.dataSource, false);
-		int[] actualRowsAffected = this.template.batchUpdate(sql, ids, sqlTypes);
 
-		assertTrue("executed 2 updates", actualRowsAffected.length == 2);
-		assertEquals(rowsAffected[0], actualRowsAffected[0]);
-		assertEquals(rowsAffected[1], actualRowsAffected[1]);
+		int[] actualRowsAffected = this.template.batchUpdate(sql, ids, sqlTypes);
+		assertThat(actualRowsAffected.length == 2).as("executed 2 updates").isTrue();
+		assertThat(actualRowsAffected[0]).isEqualTo(rowsAffected[0]);
+		assertThat(actualRowsAffected[1]).isEqualTo(rowsAffected[1]);
 		verify(this.preparedStatement, times(2)).addBatch();
 		verify(this.preparedStatement).setObject(1, 100, sqlTypes[0]);
 		verify(this.preparedStatement).setObject(1, 200, sqlTypes[0]);
@@ -790,26 +756,20 @@ public class JdbcTemplateTests {
 	public void testBatchUpdateWithCollectionOfObjects() throws Exception {
 		final String sql = "UPDATE NOSUCHTABLE SET DATE_DISPATCHED = SYSDATE WHERE ID = ?";
 		final List<Integer> ids = Arrays.asList(100, 200, 300);
-		final int[] rowsAffected1 = new int[] { 1, 2 };
-		final int[] rowsAffected2 = new int[] { 3 };
+		final int[] rowsAffected1 = new int[] {1, 2};
+		final int[] rowsAffected2 = new int[] {3};
 
 		given(this.preparedStatement.executeBatch()).willReturn(rowsAffected1, rowsAffected2);
 		mockDatabaseMetaData(true);
 
-		ParameterizedPreparedStatementSetter<Integer> setter = new ParameterizedPreparedStatementSetter<Integer>() {
-			@Override
-			public void setValues(PreparedStatement ps, Integer argument) throws SQLException {
-				ps.setInt(1, argument.intValue());
-			}
-		};
-
+		ParameterizedPreparedStatementSetter<Integer> setter = (ps, argument) -> ps.setInt(1, argument.intValue());
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 
 		int[][] actualRowsAffected = template.batchUpdate(sql, ids, 2, setter);
-		assertTrue("executed 2 updates", actualRowsAffected[0].length == 2);
-		assertEquals(rowsAffected1[0], actualRowsAffected[0][0]);
-		assertEquals(rowsAffected1[1], actualRowsAffected[0][1]);
-		assertEquals(rowsAffected2[0], actualRowsAffected[1][0]);
+		assertThat(actualRowsAffected[0].length).as("executed 2 updates").isEqualTo(2);
+		assertThat(actualRowsAffected[0][0]).isEqualTo(rowsAffected1[0]);
+		assertThat(actualRowsAffected[0][1]).isEqualTo(rowsAffected1[1]);
+		assertThat(actualRowsAffected[1][0]).isEqualTo(rowsAffected2[0]);
 
 		verify(this.preparedStatement, times(3)).addBatch();
 		verify(this.preparedStatement).setInt(1, ids.get(0));
@@ -820,19 +780,20 @@ public class JdbcTemplateTests {
 	}
 
 	@Test
-	public void testCouldntGetConnectionForOperationOrExceptionTranslator() throws SQLException {
+	public void testCouldNotGetConnectionForOperationOrExceptionTranslator() throws SQLException {
 		SQLException sqlException = new SQLException("foo", "07xxx");
 		this.dataSource = mock(DataSource.class);
 		given(this.dataSource.getConnection()).willThrow(sqlException);
 		JdbcTemplate template = new JdbcTemplate(this.dataSource, false);
 		RowCountCallbackHandler rcch = new RowCountCallbackHandler();
-		this.thrown.expect(CannotGetJdbcConnectionException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch);
+
+		assertThatExceptionOfType(CannotGetJdbcConnectionException.class).isThrownBy(() ->
+				template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch))
+			.withCause(sqlException);
 	}
 
 	@Test
-	public void testCouldntGetConnectionForOperationWithLazyExceptionTranslator() throws SQLException {
+	public void testCouldNotGetConnectionForOperationWithLazyExceptionTranslator() throws SQLException {
 		SQLException sqlException = new SQLException("foo", "07xxx");
 		this.dataSource = mock(DataSource.class);
 		given(this.dataSource.getConnection()).willThrow(sqlException);
@@ -840,30 +801,31 @@ public class JdbcTemplateTests {
 		this.template.setDataSource(this.dataSource);
 		this.template.afterPropertiesSet();
 		RowCountCallbackHandler rcch = new RowCountCallbackHandler();
-		this.thrown.expect(CannotGetJdbcConnectionException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		this.template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch);
+
+		assertThatExceptionOfType(CannotGetJdbcConnectionException.class).isThrownBy(() ->
+				this.template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch))
+			.withCause(sqlException);
 	}
 
 	@Test
-	public void testCouldntGetConnectionInOperationWithExceptionTranslatorInitializedViaBeanProperty()
+	public void testCouldNotGetConnectionInOperationWithExceptionTranslatorInitializedViaBeanProperty()
 			throws SQLException {
 
-		doTestCouldntGetConnectionInOperationWithExceptionTranslatorInitialized(true);
+		doTestCouldNotGetConnectionInOperationWithExceptionTranslatorInitialized(true);
 	}
 
 	@Test
-	public void testCouldntGetConnectionInOperationWithExceptionTranslatorInitializedInAfterPropertiesSet()
+	public void testCouldNotGetConnectionInOperationWithExceptionTranslatorInitializedInAfterPropertiesSet()
 			throws SQLException {
 
-		doTestCouldntGetConnectionInOperationWithExceptionTranslatorInitialized(false);
+		doTestCouldNotGetConnectionInOperationWithExceptionTranslatorInitialized(false);
 	}
 
 	/**
 	 * If beanProperty is true, initialize via exception translator bean property;
 	 * if false, use afterPropertiesSet().
 	 */
-	private void doTestCouldntGetConnectionInOperationWithExceptionTranslatorInitialized(boolean beanProperty)
+	private void doTestCouldNotGetConnectionInOperationWithExceptionTranslatorInitialized(boolean beanProperty)
 			throws SQLException {
 
 		SQLException sqlException = new SQLException("foo", "07xxx");
@@ -881,9 +843,9 @@ public class JdbcTemplateTests {
 			this.template.afterPropertiesSet();
 		}
 		RowCountCallbackHandler rcch = new RowCountCallbackHandler();
-		this.thrown.expect(CannotGetJdbcConnectionException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		this.template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch);
+		assertThatExceptionOfType(CannotGetJdbcConnectionException.class).isThrownBy(() ->
+				this.template.query("SELECT ID, FORENAME FROM CUSTMR WHERE ID < 3", rcch))
+			.withCause(sqlException);
 	}
 
 	@Test
@@ -894,14 +856,9 @@ public class JdbcTemplateTests {
 
 		given(this.preparedStatement.executeUpdate()).willReturn(expectedRowsUpdated);
 
-		PreparedStatementSetter pss = new PreparedStatementSetter() {
-			@Override
-			public void setValues(PreparedStatement ps) throws SQLException {
-				ps.setString(1, name);
-			}
-		};
+		PreparedStatementSetter pss = ps -> ps.setString(1, name);
 		int actualRowsUpdated = new JdbcTemplate(this.dataSource).update(sql, pss);
-		assertTrue("updated correct # of rows", actualRowsUpdated == expectedRowsUpdated);
+		assertThat(expectedRowsUpdated).as("updated correct # of rows").isEqualTo(actualRowsUpdated);
 		verify(this.preparedStatement).setString(1, name);
 		verify(this.preparedStatement).close();
 		verify(this.connection).close();
@@ -914,26 +871,17 @@ public class JdbcTemplateTests {
 		SQLException sqlException = new SQLException();
 		given(this.preparedStatement.executeUpdate()).willThrow(sqlException);
 
-		PreparedStatementSetter pss = new PreparedStatementSetter() {
-			@Override
-			public void setValues(PreparedStatement ps) throws SQLException {
-				ps.setString(1, name);
-			}
-		};
-		this.thrown.expect(DataAccessException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		try {
-			new JdbcTemplate(this.dataSource).update(sql, pss);
-		}
-		finally {
-			verify(this.preparedStatement).setString(1, name);
-			verify(this.preparedStatement).close();
-			verify(this.connection, atLeastOnce()).close();
-		}
+		PreparedStatementSetter pss = ps -> ps.setString(1, name);
+		assertThatExceptionOfType(DataAccessException.class).isThrownBy(() ->
+				new JdbcTemplate(this.dataSource).update(sql, pss))
+			.withCause(sqlException);
+		verify(this.preparedStatement).setString(1, name);
+		verify(this.preparedStatement).close();
+		verify(this.connection, atLeastOnce()).close();
 	}
 
 	@Test
-	public void testCouldntClose() throws Exception {
+	public void testCouldNotClose() throws Exception {
 		SQLException sqlException = new SQLException("bar");
 		given(this.connection.createStatement()).willReturn(this.statement);
 		given(this.resultSet.next()).willReturn(false);
@@ -960,21 +908,14 @@ public class JdbcTemplateTests {
 
 		JdbcTemplate t = new JdbcTemplate(this.dataSource);
 		t.setIgnoreWarnings(false);
-		this.thrown.expect(SQLWarningException.class);
-		this.thrown.expect(exceptionCause(sameInstance(warnings)));
-		try {
-			t.query(sql, new RowCallbackHandler() {
-				@Override
-				public void processRow(ResultSet rs) throws SQLException {
-					rs.getByte(1);
-				}
-			});
-		}
-		finally {
-			verify(this.resultSet).close();
-			verify(this.preparedStatement).close();
-			verify(this.connection).close();
-		}
+
+		ResultSetExtractor<Byte> extractor = rs -> rs.getByte(1);
+		assertThatExceptionOfType(SQLWarningException.class).isThrownBy(() ->
+				t.query(sql, extractor))
+			.withCause(warnings);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
+		verify(this.connection).close();
 	}
 
 	@Test
@@ -989,12 +930,8 @@ public class JdbcTemplateTests {
 		// Too long: truncation
 
 		this.template.setIgnoreWarnings(true);
-		this.template.query(sql, new RowCallbackHandler() {
-			@Override
-			public void processRow(ResultSet rs) throws java.sql.SQLException {
-				rs.getByte(1);
-			}
-		});
+		RowCallbackHandler rch = rs -> rs.getByte(1);
+		this.template.query(sql, rch);
 
 		verify(this.resultSet).close();
 		verify(this.preparedStatement).close();
@@ -1010,22 +947,14 @@ public class JdbcTemplateTests {
 		mockDatabaseMetaData(false);
 		given(this.connection.createStatement()).willReturn(this.preparedStatement);
 
-		this.thrown.expect(BadSqlGrammarException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		try {
-			this.template.query(sql, new RowCallbackHandler() {
-				@Override
-				public void processRow(ResultSet rs) throws SQLException {
+		assertThatExceptionOfType(BadSqlGrammarException.class).isThrownBy(() ->
+				this.template.query(sql, (RowCallbackHandler) rs -> {
 					throw sqlException;
-				}
-			});
-			fail("Should have thrown BadSqlGrammarException");
-		}
-		finally {
-			verify(this.resultSet).close();
-			verify(this.preparedStatement).close();
-			verify(this.connection, atLeastOnce()).close();
-		}
+				}))
+			.withCause(sqlException);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
+		verify(this.connection, atLeastOnce()).close();
 	}
 
 	@Test
@@ -1041,21 +970,14 @@ public class JdbcTemplateTests {
 		template.setDatabaseProductName("MySQL");
 		template.afterPropertiesSet();
 
-		this.thrown.expect(BadSqlGrammarException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		try {
-			template.query(sql, new RowCallbackHandler() {
-				@Override
-				public void processRow(ResultSet rs) throws SQLException {
+		assertThatExceptionOfType(BadSqlGrammarException.class).isThrownBy(() ->
+				template.query(sql, (RowCallbackHandler) rs -> {
 					throw sqlException;
-				}
-			});
-		}
-		finally {
-			verify(this.resultSet).close();
-			verify(this.preparedStatement).close();
-			verify(this.connection).close();
-		}
+				}))
+			.withCause(sqlException);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
+		verify(this.connection).close();
 	}
 
 	/**
@@ -1078,21 +1000,14 @@ public class JdbcTemplateTests {
 		template.setExceptionTranslator(new SQLStateSQLExceptionTranslator());
 		template.afterPropertiesSet();
 
-		this.thrown.expect(BadSqlGrammarException.class);
-		this.thrown.expect(exceptionCause(sameInstance(sqlException)));
-		try {
-			template.query(sql, new RowCallbackHandler() {
-				@Override
-				public void processRow(ResultSet rs) throws SQLException {
+		assertThatExceptionOfType(BadSqlGrammarException.class).isThrownBy(() ->
+				template.query(sql, (RowCallbackHandler) rs -> {
 					throw sqlException;
-				}
-			});
-		}
-		finally {
-			verify(this.resultSet).close();
-			verify(this.preparedStatement).close();
-			verify(this.connection).close();
-		}
+				}))
+			.withCause(sqlException);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
+		verify(this.connection).close();
 	}
 
 	@Test
@@ -1102,37 +1017,14 @@ public class JdbcTemplateTests {
 		given(this.preparedStatement.executeQuery()).willReturn(resultSet2);
 		given(this.connection.createStatement()).willReturn(this.statement);
 
-		try {
-			this.template.query("my query", new ResultSetExtractor<Object>() {
-				@Override
-				public Object extractData(ResultSet rs) {
+		assertThatExceptionOfType(InvalidDataAccessApiUsageException.class).isThrownBy(() ->
+				this.template.query("my query", (ResultSetExtractor<Object>) rs -> {
 					throw new InvalidDataAccessApiUsageException("");
-				}
-			});
-			fail("Should have thrown InvalidDataAccessApiUsageException");
-		}
-		catch (InvalidDataAccessApiUsageException idaauex) {
-			// ok
-		}
-
-		try {
-			this.template.query(new PreparedStatementCreator() {
-				@Override
-				public PreparedStatement createPreparedStatement(Connection con)
-						throws SQLException {
-					return con.prepareStatement("my query");
-				}
-			}, new ResultSetExtractor<Object>() {
-				@Override
-				public Object extractData(ResultSet rs2) {
+				}));
+		assertThatExceptionOfType(InvalidDataAccessApiUsageException.class).isThrownBy(() ->
+				this.template.query(con -> con.prepareStatement("my query"), (ResultSetExtractor<Object>) rs2 -> {
 					throw new InvalidDataAccessApiUsageException("");
-				}
-			});
-			fail("Should have thrown InvalidDataAccessApiUsageException");
-		}
-		catch (InvalidDataAccessApiUsageException idaauex) {
-			// ok
-		}
+				}));
 
 		verify(this.resultSet).close();
 		verify(resultSet2).close();
@@ -1146,63 +1038,58 @@ public class JdbcTemplateTests {
 		given(this.callableStatement.execute()).willReturn(true);
 		given(this.callableStatement.getUpdateCount()).willReturn(-1);
 
-		List<SqlParameter> params = new ArrayList<>();
-		params.add(new SqlReturnResultSet("", new RowCallbackHandler() {
-			@Override
-			public void processRow(ResultSet rs) {
-				throw new InvalidDataAccessApiUsageException("");
-			}
+		SqlParameter param = new SqlReturnResultSet("", (RowCallbackHandler) rs -> {
+			throw new InvalidDataAccessApiUsageException("");
+		});
 
-		}));
-
-		this.thrown.expect(InvalidDataAccessApiUsageException.class);
-		try {
-			this.template.call(new CallableStatementCreator() {
-				@Override
-				public CallableStatement createCallableStatement(Connection conn)
-						throws SQLException {
-					return conn.prepareCall("my query");
-				}
-			}, params);
-		}
-		finally {
-			verify(this.resultSet).close();
-			verify(this.callableStatement).close();
-			verify(this.connection).close();
-		}
+		assertThatExceptionOfType(InvalidDataAccessApiUsageException.class).isThrownBy(() ->
+				this.template.call(conn -> conn.prepareCall("my query"), Collections.singletonList(param)));
+		verify(this.resultSet).close();
+		verify(this.callableStatement).close();
+		verify(this.connection).close();
 	}
 
 	@Test
 	public void testCaseInsensitiveResultsMap() throws Exception {
-
 		given(this.callableStatement.execute()).willReturn(false);
 		given(this.callableStatement.getUpdateCount()).willReturn(-1);
 		given(this.callableStatement.getObject(1)).willReturn("X");
 
-		assertTrue("default should have been NOT case insensitive",
-				!this.template.isResultsMapCaseInsensitive());
+		boolean condition = !this.template.isResultsMapCaseInsensitive();
+		assertThat(condition).as("default should have been NOT case insensitive").isTrue();
 
 		this.template.setResultsMapCaseInsensitive(true);
-		assertTrue("now it should have been set to case insensitive",
-				this.template.isResultsMapCaseInsensitive());
+		assertThat(this.template.isResultsMapCaseInsensitive()).as("now it should have been set to case insensitive").isTrue();
 
-		List<SqlParameter> params = new ArrayList<>();
-		params.add(new SqlOutParameter("a", 12));
+		Map<String, Object> out = this.template.call(
+				conn -> conn.prepareCall("my query"), Collections.singletonList(new SqlOutParameter("a", 12)));
 
-		Map<String, Object> out = this.template.call(new CallableStatementCreator() {
-			@Override
-			public CallableStatement createCallableStatement(Connection conn)
-					throws SQLException {
-				return conn.prepareCall("my query");
-			}
-		}, params);
-
-		assertThat(out, instanceOf(LinkedCaseInsensitiveMap.class));
-		assertNotNull("we should have gotten the result with upper case", out.get("A"));
-		assertNotNull("we should have gotten the result with lower case", out.get("a"));
+		assertThat(out).isInstanceOf(LinkedCaseInsensitiveMap.class);
+		assertThat(out.get("A")).as("we should have gotten the result with upper case").isNotNull();
+		assertThat(out.get("a")).as("we should have gotten the result with lower case").isNotNull();
 		verify(this.callableStatement).close();
 		verify(this.connection).close();
 	}
+
+	@Test  // SPR-16578
+	public void testEquallyNamedColumn() throws SQLException {
+		given(this.connection.createStatement()).willReturn(this.statement);
+
+		ResultSetMetaData metaData = mock(ResultSetMetaData.class);
+		given(metaData.getColumnCount()).willReturn(2);
+		given(metaData.getColumnLabel(1)).willReturn("x");
+		given(metaData.getColumnLabel(2)).willReturn("X");
+		given(this.resultSet.getMetaData()).willReturn(metaData);
+
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1)).willReturn("first value");
+		given(this.resultSet.getObject(2)).willReturn("second value");
+
+		Map<String, Object> map = this.template.queryForMap("my query");
+		assertThat(map.size()).isEqualTo(1);
+		assertThat(map.get("x")).isEqualTo("first value");
+	}
+
 
 	private void mockDatabaseMetaData(boolean supportsBatchUpdates) throws SQLException {
 		DatabaseMetaData databaseMetaData = mock(DatabaseMetaData.class);
